@@ -80,7 +80,7 @@
 		}
 		
 		protected function store(
-			$action, $key, &$value, $expires = Cache::EXPIRES_MEDIUM
+			$action, $key, $value, $expires = Cache::EXPIRES_MEDIUM
 		)
 		{
 			throw new UnsupportedMethodException();
