@@ -84,7 +84,7 @@
 			}
 		}
 		
-		protected function store($action, $key, &$value, $expires = 0)
+		protected function store($action, $key, $value, $expires = 0)
 		{
 			$path = $this->makePath($key);
 			$time = time();
